# learning-rust-by-counting-words

./: .gitignore  Cargo.toml  README.md  create_large_text.sh
examples/: block1-bonus.rs  block1.rs  block2.rs  block3-bonus.rs  block3.rs  block4.rs  block5.rs  block6-bonus.rs  block6.rs
examples/perf/: Cargo.toml
examples/perf-par/: Cargo.toml
examples/perf-par/benches/: wordcount.rs
examples/perf-par/src/: lib.rs  main.rs
examples/perf/src/: lib.rs
fixtures/: test.txt
src/: main.rs
wc/: Cargo.toml
wc/src/: main.rs
